Make Pipeline polymorphic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ set(CMAKE_CXX_STANDARD 11)
 project(pipeline-1)
 
 file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp")
+list(REMOVE_ITEM SOURCES "src/Pipeline.cpp")
 add_executable(pipeline-1 ${SOURCES})
